--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.14.1",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.24",
     "jwt-decode": "^4.0.0",
